# fashion-business-daily

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
config/: sources.yaml
src/fashion_business_daily/: __init__.py  aggregator.py  articles.py  cli.py  config.py  report.py  site.py  sources.py
tests/: test_report.py  test_site.py
